header, home preview, top bids, top filters

--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -1,3 +1,38 @@
 .btn {
+  padding: 10px 30px 10px;
+
   display: block;
+
+  height: auto;
+
+  color: #fff;
+  background: $purple;
+  border: 1px solid $purple;
+  border-radius: 16px;
+
+  &-link {
+    display: block;
+
+    width: fit-content;
+  }
+
+  &-outline {
+    color: $purple;
+    background: transparent;
+  }
+
+  &-white {
+    color: $purple;
+    background: #fff;
+    border-color: #fff;
+  }
+
+  &-lg {
+    padding: 15px 45px;
+
+    font-size: 18px;
+    line-height: 22px;
+
+    border-radius: 30px;
+  }
 }
