--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,5 +1,6 @@
 $purple: #673bb7;
 $purple-l: #8834a2;
+$purple-hover: #884ff1;
 $purple-grad: linear-gradient(105.93deg, #8834a2 -23.55%, #d9226e 103.33%);
 $blue-grad: linear-gradient(41.78deg, #1a237e 18.98%, #673ab7 54.7%, #e91e63 84.39%);
 $pink: #d62370;
