--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -24,7 +24,14 @@
   &__hot {
     padding: 90px 0 100px;
   }
+
   &__top {
     padding-bottom: 95px;
+  }
+
+  &__collections {
+    padding: 80px 0 90px;
+
+    background: #f8f8f8;
   }
 }
