--- a/src/components/organisms/TopUsers/TopUsers.scss
+++ b/src/components/organisms/TopUsers/TopUsers.scss
@@ -1,39 +1,72 @@
-@import '../../styles/vars';
+@import '../../../styles/vars';
+
 .t-users {
   &__box {
     display: flex;
     align-items: center;
   }
+
   &__filter {
+    margin: 0 30px;
+
     display: flex;
     align-items: center;
-    margin: 0 30px;
+
     &-item {
-      background: #fafafa;
       padding: 11px 17px;
-      cursor: pointer;
+
       font-size: 16px;
       line-height: 20px;
+
+      cursor: pointer;
+
+      background: #fafafa;
+
       &:first-child {
         border-radius: 30px 0 0 30px;
       }
+
       &:last-child {
-        border-radius: 0px 30px 30px 0px;
+        border-radius: 0 30px 30px 0;
       }
+
       span {
         display: block;
+
         min-width: 58px;
+
         text-align: center;
       }
+
       &.active {
-        background: $purple-grad;
         color: white;
+        background: $purple-grad;
+
         span {
           color: white;
           background: transparent;
           -webkit-text-fill-color: #fff;
         }
       }
+    }
+  }
+
+  &__content {
+    margin-top: 45px;
+
+    display: grid;
+    grid-auto-flow: column;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(5, 1fr);
+    grid-row-gap: 25px;
+  }
+
+  &__user {
+    display: flex;
+    align-items: center;
+
+    &-index {
+      margin-right: 15px;
     }
   }
 }
