--- a/src/components/atoms/UserMini/UserMini.scss
+++ b/src/components/atoms/UserMini/UserMini.scss
@@ -1,9 +1,10 @@
 .u-mini {
   padding-right: 10px;
-  width: fit-content;
 
   display: flex;
   align-items: center;
+
+  width: fit-content;
 
   background: #fff;
   border: 5px solid #fff;
@@ -14,10 +15,15 @@
     box-shadow: none;
   }
 
+  &__wrapper {
+    position: relative;
+    margin-right: 5px;
+    &-lg {
+      margin-right: 8px;
+    }
+  }
   &__box {
     &-img {
-      margin-right: 5px;
-
       display: block;
       overflow: hidden;
 
@@ -27,16 +33,19 @@
       border-radius: 50%;
 
       &-lg {
-        margin-right: 8px;
-
         width: 51px;
         height: 51px;
       }
-
-      img {
-        width: 100%;
-        height: 100%;
-      }
+    }
+  }
+  &__img {
+    width: 100%;
+    height: 100%;
+    &-check {
+      width: 17px;
+      position: absolute;
+      bottom: -2px;
+      right: 1.5px;
     }
   }
 
