footer, new version NFTCard, sort Component

--- a/src/components/organisms/Filter/Filter.scss
+++ b/src/components/organisms/Filter/Filter.scss
@@ -1,6 +1,10 @@
 @import '../../../styles/vars';
 
 .filter {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-right: 70px;
   &__box {
     display: flex;
     align-items: center;
