--- a/src/components/molecules/NFTCard/NFTCard.scss
+++ b/src/components/molecules/NFTCard/NFTCard.scss
@@ -14,6 +14,8 @@
     }
 
     &-users {
+      position: relative;
+
       display: flex;
       align-items: center;
     }
@@ -42,6 +44,12 @@
     }
   }
 
+  &__like {
+    position: absolute;
+    right: 0;
+    bottom: calc(100% + 17px);
+  }
+
   &__content {
     padding: 20px 20px 15px;
   }
@@ -57,18 +65,19 @@
     }
 
     &-text {
-      & + & {
-        margin-left: 10px;
-      }
+      margin-right: 10px;
     }
 
     &-bid {
       &-box {
-        margin-left: 10px;
         padding: 8px 12px;
 
         border-radius: 30px;
       }
+    }
+
+    &-bid-box + &-text {
+      margin-left: 10px;
     }
   }
 }
