--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -22,6 +22,11 @@
     line-height: 15px;
   }
 
+  &-smd {
+    font-size: 16px;
+    line-height: 20px;
+  }
+
   &-md {
     font-size: 18px;
     line-height: 22px;
