--- a/src/styles/components/_input.scss
+++ b/src/styles/components/_input.scss
@@ -1,4 +1,14 @@
 .input,
 input {
-  bottom: none;
+  background: white !important;
+  outline: none !important;
+  box-shadow: none !important;
+
+  &__field {
+    margin-bottom: 0;
+
+    & + & {
+      margin-top: 20px;
+    }
+  }
 }
