--- a/src/components/organisms/Sort/Sort.scss
+++ b/src/components/organisms/Sort/Sort.scss
@@ -1,13 +1,17 @@
 .sort {
+  position: relative;
+
   font-size: 13px;
   line-height: 16px;
-  position: relative;
+
   &__head {
     cursor: pointer;
+
     img {
       margin-left: 9px;
     }
   }
+
   &.open {
     .sort {
       &__head {
@@ -15,49 +19,69 @@
           transform: rotate(180deg);
         }
       }
+
       &__content {
         visibility: visible;
+
         opacity: 1;
       }
     }
   }
+
   &__content {
     position: absolute;
-    padding: 20px 10px;
-    background: #fafafa;
-    box-shadow: 0px 4px 3px rgba(103, 59, 183, 0.1);
-    border-radius: 30px;
-    top: calc(100% + 4px);
-    transition: 0.3s;
-    left: -20px;
     z-index: 10;
+    top: calc(100% + 4px);
+    left: -20px;
+
+    padding: 20px 10px;
+
     visibility: hidden;
+
+    background: #fafafa;
+    border-radius: 30px;
     opacity: 0;
+    box-shadow: 0 4px 3px rgba(103, 59, 183, 0.1);
+
+    transition: 0.3s;
+
     &.top {
       top: unset;
       bottom: calc(100% + 4px);
     }
   }
+
   &__item {
     padding: 5px 10px;
-    cursor: pointer;
-    transition: 0.3s;
-    border-radius: 10px;
+
     display: flex;
     align-items: center;
+
+    cursor: pointer;
+
+    border-radius: 10px;
+
+    transition: 0.3s;
+
     &:hover {
       background: rgba(4, 4, 5, 0.05);
     }
+
     &.check {
       img {
-        opacity: 1;
         visibility: visible;
+
+        opacity: 1;
       }
     }
+
     img {
       margin-left: 10px;
+
       visibility: 0;
+
       opacity: 0;
+
       transition: 0.3s;
     }
   }
