--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -35,4 +35,15 @@
 
     border-radius: 30px;
   }
+  &-md {
+    font-size: 16px;
+    line-height: 20px;
+    padding: 20px 40px;
+    border-radius: 30px;
+  }
+
+  &-gradient {
+    background: linear-gradient(41.78deg, #1a237e 18.98%, #673ab7 54.7%, #e91e63 84.39%) !important;
+    border: none;
+  }
 }
