--- a/src/components/molecules/NFTCard/NFTCard.scss
+++ b/src/components/molecules/NFTCard/NFTCard.scss
@@ -15,6 +15,7 @@
 
     &-users {
       position: relative;
+      justify-content: space-between;
 
       display: flex;
       align-items: center;
@@ -23,7 +24,9 @@
     &-img {
       margin: 0 auto;
 
-      display: block;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       overflow: hidden;
 
       width: fit-content;
@@ -33,7 +36,8 @@
       border-radius: 12px;
 
       img {
-        height: 100%;
+        max-width: 102%;
+        max-height: 102%;
       }
     }
   }
