--- a/src/pages/Create/Create.scss
+++ b/src/pages/Create/Create.scss
@@ -1,36 +1,39 @@
+@import '../../styles/vars';
+
 .create {
-  padding: 90px 0 130px;
+  padding: 60px 0;
+
   &__content {
-    max-width: 690px;
     margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+
+    max-width: 995px;
   }
-  &__text {
-    max-width: 445px;
-  }
-  &-subtitle {
-    margin-top: 30px;
-    max-width: 445px;
-  }
-  &__wrapper {
+
+  &__back {
+    margin-bottom: 7px;
+    margin-left: -25px;
+
     display: flex;
     align-items: center;
-    width: 100%;
-    margin: 60px 0 50px;
-  }
-  &__item {
-    border-radius: 30px;
-    background: #fafafa;
-    padding: 84px 40px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    & + & {
-      padding-top: 68px;
-      margin-left: 50px;
+
+    width: fit-content;
+
+    cursor: pointer;
+
+    &:hover {
+      span {
+        color: $purple;
+      }
     }
+
+    span {
+      margin-left: 10px;
+
+      transition: 0.3s;
+    }
+  }
+
+  &__title {
+    margin-bottom: 75px;
   }
 }
