--- a/src/styles/components/_box.scss
+++ b/src/styles/components/_box.scss
@@ -10,4 +10,11 @@
     border-radius: 12px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
   }
+
+  &-outline {
+    padding: 20px 30px;
+
+    border: 2px solid #eee;
+    border-radius: 30px;
+  }
 }
