--- a/src/styles/components/_forms.scss
+++ b/src/styles/components/_forms.scss
@@ -44,4 +44,85 @@
       border: none;
     }
   }
+
+  &-create {
+    display: flex;
+    &__content {
+      max-width: 600px;
+      width: 100%;
+    }
+
+    &__upload {
+      &-title {
+        margin-bottom: 20px;
+      }
+    }
+
+    &__box {
+      margin-top: 25px;
+    }
+
+    &__switch {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      & + & {
+        margin-top: 30px;
+      }
+    }
+
+    &__item {
+      margin-top: 30px;
+
+      &-text {
+        margin-top: 16px;
+
+        display: flex;
+        align-items: center;
+
+        & + & {
+          margin-top: 5px;
+        }
+      }
+
+      &-eth {
+        margin: 0 12px;
+        padding: 8px 12px;
+
+        border-radius: 30px;
+      }
+    }
+    &__choose {
+      margin: 60px 0;
+    }
+    &__field {
+      margin-bottom: 40px;
+    }
+    &__wrapper {
+      display: flex;
+      justify-content: space-between;
+      .input__field {
+        width: 100%;
+      }
+      .input__field + .input__field {
+        margin-top: 0;
+        margin-left: 40px;
+      }
+    }
+    &__card {
+      min-width: 320px;
+      margin-left: 5.208vw;
+      position: sticky;
+      top: 110px;
+      height: fit-content;
+    }
+  }
+}
+.ant-form-item-control {
+  position: relative;
+  .ant-form-item-explain-error {
+    position: absolute;
+    top: 100%;
+  }
 }
