--- a/src/styles/components/_input.scss
+++ b/src/styles/components/_input.scss
@@ -1,14 +1,27 @@
 .input,
-input {
+input,
+textarea {
   background: white !important;
   outline: none !important;
   box-shadow: none !important;
+  resize: none !important;
 
   &__field {
     margin-bottom: 0;
 
     & + & {
       margin-top: 20px;
+    }
+
+    &-create {
+      padding: 13px;
+
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      background: #fafafa;
+      border-radius: 30px;
     }
   }
 
@@ -22,4 +35,24 @@ input {
       color: rgba(0, 0, 0, 0.6);
     }
   }
+
+  &__create {
+    background: transparent !important;
+    border: none;
+
+    &:hover {
+      border: none;
+    }
+  }
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+
+  margin: 0;
+}
+
+input[type='number'] {
+  -moz-appearance: textfield;
 }
