--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -24,7 +24,7 @@
   &-white {
     color: $purple;
     background: #fff;
-    border-color: #fff;
+    border-color: #ededed;
   }
 
   &-lg {
@@ -48,5 +48,19 @@
   &-gradient {
     background: linear-gradient(41.78deg, #1a237e 18.98%, #673ab7 54.7%, #e91e63 84.39%) !important;
     border: none;
+  }
+
+  &-clear {
+    padding: 0;
+
+    display: inline-block;
+
+    background: none;
+    border: none;
+    box-shadow: none;
+    //color: #fff;
+    //background: $purple;
+    //border: 1px solid $purple;
+    //border-radius: 16px;
   }
 }
