--- a/src/styles/components/_tabs.scss
+++ b/src/styles/components/_tabs.scss
@@ -1,8 +1,29 @@
 .tabs {
-  .ant-tabs-nav {
-    margin-bottom: 0;
+  position: relative;
 
-    border-bottom: 1px solid rgb(230, 230, 230);
+  &::before {
+    content: '';
+
+    position: absolute;
+    top: 44px;
+    bottom: 0;
+
+    width: 100%;
+    height: 1px;
+
+    background-color: rgb(230, 230, 230);
+  }
+
+  .ant-tabs-nav {
+    margin: 0 auto;
+    padding: 0 10px;
+
+    width: 100%;
+    max-width: 1360px;
+
+    &::before {
+      display: none;
+    }
 
     .ant-tabs-nav-list {
       .ant-tabs-tab {
