finished User activity tab

--- a/src/components/organisms/TopUsers/TopUsers.scss
+++ b/src/components/organisms/TopUsers/TopUsers.scss
@@ -39,11 +39,11 @@
       }
 
       &.active {
-        color: #ffffff;
+        color: #fff;
         background: $purple-grad;
 
         span {
-          color: #ffffff;
+          color: #fff;
           background: transparent;
           -webkit-text-fill-color: #fff;
         }
