--- a/src/components/atoms/UserWallet/UserWallet.scss
+++ b/src/components/atoms/UserWallet/UserWallet.scss
@@ -7,11 +7,18 @@
   &__address {
     margin-right: 10px;
 
+    display: block;
+    overflow: hidden;
+
+    max-width: 90px;
+
     font-family: Montserrat, sans-serif;
     font-size: 15px;
     font-weight: 500;
     font-style: normal;
     line-height: 18px;
+
+    text-overflow: ellipsis;
 
     color: #673bb7;
   }
