metamask connect, start buy token

--- a/src/pages/CreateChoose/CreateChoose.scss
+++ b/src/pages/CreateChoose/CreateChoose.scss
@@ -41,6 +41,9 @@
 
     background: #fafafa;
     border-radius: 30px;
+    &-text {
+      margin-top: 20px;
+    }
 
     & + & {
       margin-left: 50px;
