--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -75,6 +75,14 @@
     color: $purple-l;
   }
 
+  &-purple-d {
+    color: $purple-d;
+  }
+
+  &-pink-l {
+    color: $pink-l;
+  }
+
   &-upper {
     text-transform: uppercase;
   }
@@ -86,7 +94,9 @@
   &-center {
     text-align: center;
   }
-
+  &-line-through {
+    text-decoration: line-through;
+  }
   &-grad {
     width: fit-content;
 
