--- a/src/components/organisms/Sort/Sort.scss
+++ b/src/components/organisms/Sort/Sort.scss
@@ -12,6 +12,10 @@
     }
   }
 
+  &__current {
+    margin-left:8px;
+  }
+
   &.open {
     .sort {
       &__head {
@@ -53,7 +57,7 @@
 
   &__item {
     padding: 5px 10px;
-
+    font-family: MB;
     display: flex;
     align-items: center;
 
@@ -68,6 +72,7 @@
     }
 
     &.check {
+      color:#8834a2;
       img {
         visibility: visible;
 
