--- a/src/components/molecules/PopoverUserLinks/PopoverUserLinks.scss
+++ b/src/components/molecules/PopoverUserLinks/PopoverUserLinks.scss
@@ -1,4 +1,8 @@
 .popover {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   &__title {
     font-family: Montserrat;
     font-size: 16px;
