--- a/src/components/molecules/TokenInfo/TokenInfo.scss
+++ b/src/components/molecules/TokenInfo/TokenInfo.scss
@@ -1,12 +1,14 @@
 .token-info {
   &__warning {
     margin-top: 20px;
-    display: inline-block;
     padding: 9px 12px;
 
-    background: #f4effb;
-    border: 1px solid #ffffff;
+    display: inline-block;
+
     box-sizing: border-box;
+
+    background: #f4effb;
+    border: 1px solid #fff;
     border-radius: 12px;
   }
 
