--- a/src/styles/components/_input.scss
+++ b/src/styles/components/_input.scss
@@ -3,7 +3,7 @@ input,
 textarea {
   resize: none !important;
 
-  background: white !important;
+  background: #fff !important;
   outline: none !important;
   box-shadow: none !important;
 
@@ -49,11 +49,11 @@ textarea {
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
+  appearance: none;
 
   margin: 0;
 }
 
 input[type='number'] {
-  -moz-appearance: textfield;
+  appearance: textfield;
 }
