--- a/src/styles/components/_popover.scss
+++ b/src/styles/components/_popover.scss
@@ -1,13 +1,10 @@
 .ant-popover {
-  &-content {
-  }
-
   &-arrow {
     display: none;
   }
 
   &-inner {
-    padding: 20px 24px 32px 24px;
+    padding: 20px 24px 32px;
 
     background: #fafafa;
     border-radius: 30px;
