--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -143,16 +143,12 @@ input[type='search']::-webkit-search-cancel-button,
 input[type='search']::-webkit-search-decoration,
 input[type='search']::-webkit-search-results-button,
 input[type='search']::-webkit-search-results-decoration {
-  -webkit-appearance: none;
-  -moz-appearance: none;
+  appearance: none;
 }
 
 input[type='search'] {
-  -webkit-appearance: none;
-  -moz-appearance: none;
+  appearance: none;
 
-  -webkit-box-sizing: content-box;
-  -moz-box-sizing: content-box;
   box-sizing: content-box;
 }
 
@@ -207,8 +203,7 @@ audio:not([controls]) {
 
 html {
   font-size: 100%; /* 1 */
-  -webkit-text-size-adjust: 100%; /* 2 */
-  -ms-text-size-adjust: 100%; /* 2 */
+  text-size-adjust: 100%; /* 2 */
 }
 
 /**
@@ -227,7 +222,7 @@ a:hover {
 
 img {
   border: 0; /* 1 */
-  -ms-interpolation-mode: bicubic; /* 2 */
+  interpolation-mode: bicubic; /* 2 */
 }
 
 /**
@@ -329,7 +324,7 @@ input[type='submit'] {
   *overflow: visible; /* 4 */
 
   cursor: pointer; /* 3 */
-  -webkit-appearance: button; /* 2 */
+  appearance: button; /* 2 */
 }
 
 /**
@@ -364,11 +359,9 @@ input[type='radio'] {
  */
 
 [type='search'] {
-  -webkit-appearance: textfield; /* 1 */
+  appearance: textfield; /* 1 */
 
-  -moz-box-sizing: content-box;
-  -webkit-box-sizing: content-box; /* 2 */
-  box-sizing: content-box;
+  box-sizing: content-box; /* 2 */
 }
 
 /**
@@ -378,7 +371,7 @@ input[type='radio'] {
 
 input[type='search']::-webkit-search-cancel-button,
 input[type='search']::-webkit-search-decoration {
-  -webkit-appearance: none;
+  appearance: none;
 }
 
 /**
@@ -400,7 +393,7 @@ textarea {
   color: #222;
 }
 
-::-moz-selection {
+::selection {
   text-shadow: none;
 
   background: #b3d4fc;
