--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -47,8 +47,16 @@
     line-height: 30px;
   }
 
+  &-regular {
+    font-weight: 500;
+  }
+
   &-bold {
-    font-family: MB;
+    font-weight: 700;
+  }
+
+  &-bolder {
+    font-weight: 800;
   }
 
   &-black {
@@ -103,7 +111,7 @@
     width: fit-content;
 
     background: $purple-grad;
-    -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
   }
 }
