--- a/src/styles/components/_switch.scss
+++ b/src/styles/components/_switch.scss
@@ -17,7 +17,6 @@
 
     background: rgba(0, 0, 0, 0.25);
     border-radius: 30px;
-    border-radius: 30px;
   }
 
   &::after {
@@ -52,7 +51,7 @@
     }
 
     &::after {
-      background-color: white;
+      background-color: #fff;
     }
 
     .ant-switch-handle {
