--- a/src/styles/components/_tabs.scss
+++ b/src/styles/components/_tabs.scss
@@ -31,10 +31,8 @@
 
         padding: 14px 0;
 
-        font-family: Montserrat;
         font-size: 14px;
-        font-weight: bold;
-        font-style: normal;
+        font-weight: 700;
         line-height: 17px;
 
         color: #959595;
