--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,7 +11,8 @@ body {
 
   height: max-content;
 
-  font-family: MR;
+  font-family: Montserrat, sans-serif;
+  font-weight: 400;
 
   color: #000;
 }
