create collection modal and form

--- a/src/styles/components/_forms.scss
+++ b/src/styles/components/_forms.scss
@@ -45,6 +45,43 @@
     }
   }
 
+  &-create-coll {
+    min-width: 340px;
+    &__item {
+      & + & {
+        margin-top: 35px;
+      }
+      &-name {
+        margin-bottom: 60px;
+      }
+      &-short {
+        margin-bottom: 60px;
+      }
+    }
+    &__upload {
+      display: flex;
+      margin-bottom: 25px;
+      &-img {
+        background: #e2e2e2;
+        width: 105px;
+        height: 105px;
+        overflow: hidden;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 50%;
+        margin-right: 15px;
+        img {
+          max-width: 100%;
+        }
+      }
+      p {
+        max-width: 220px;
+        margin-bottom: 10px;
+      }
+    }
+  }
+
   &-create {
     display: flex;
 
@@ -132,8 +169,11 @@
 .ant-form-item-control {
   position: relative;
 
-  .ant-form-item-explain-error {
+  .ant-form-item-explain {
     position: absolute;
-    top: 100%;
+    top: calc(100% + 10px);
+    & * {
+      font-family: MB;
+    }
   }
 }
