added token mobile layout

--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -7,3 +7,8 @@ $blue-grad: linear-gradient(41.78deg, #1a237e 18.98%, #673ab7 54.7%, #e91e63 84.
 $pink: #d62370;
 $pink-l: #da3d80;
 $gray: #959595;
+// Mobile first
+$mediaWidthLaptop: 1440px;
+$mediaWidthDesktop: 1024px;
+$mediaWidthTablet: 768px;
+$mediaWidthMobile: 550px;
