--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,10 +1,23 @@
+@import 'src/styles/mixins/media';
+
 .h1 {
   font-size: 50px;
   line-height: 61px;
 
+  @include b('mobile') {
+    max-width: 360px;
+
+    font-size: 40px;
+    line-height: 49px;
+  }
+
   &-md {
     font-size: 40px;
     line-height: 49px;
+    @include b('mobile') {
+      font-size: 30px;
+      line-height: 37px;
+    }
   }
 
   &-xl {
@@ -50,7 +63,12 @@
   &-xxl {
     font-size: 40px;
     line-height: 49px;
+    @include b('mobile') {
+      font-size: 30px;
+      line-height: 37px;
+    }
   }
+
   &-regular {
     font-weight: 500;
   }
