--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -64,4 +64,9 @@
     border: none;
     box-shadow: none;
   }
+  &-loading {
+    background: #f4f4f4 !important;
+    border: 2px solid #dddddd !important;
+    color: #919191;
+  }
 }
