--- a/src/components/molecules/UserOverview/UserOverview.scss
+++ b/src/components/molecules/UserOverview/UserOverview.scss
@@ -1,7 +1,12 @@
+@import 'src/styles/mixins/media';
+
 .user-overview {
   position: relative;
 
   padding-bottom: 70px;
+
+  display: flex;
+  flex-direction: column;
 
   min-height: 220px;
 
@@ -12,13 +17,22 @@
 
     border: #fff 5px solid;
     border-radius: 50%;
+    @include b('mobile') {
+      left: calc(50% - 75px);
+    }
   }
 
   &__content {
     margin-left: 220px;
-
+    //display: flex;
+    //flex-direction: column;
     &__name {
       margin-top: 24px;
+      @include b('mobile') {
+        margin-top: 90px;
+
+        text-align: center;
+      }
     }
 
     &_container {
@@ -26,10 +40,19 @@
 
       display: flex;
       flex-direction: row;
+      align-items: start;
+
+      @include b('mobile') {
+        flex-direction: column;
+        align-items: center;
+      }
     }
 
     &__wallet {
       margin-top: 0;
+      @include b('mobile') {
+        margin-top: 10px;
+      }
     }
 
     &__social-networks {
@@ -37,6 +60,10 @@
 
       display: flex;
       flex-wrap: wrap;
+
+      @include b('mobile') {
+        margin: 20px 0 0 0;
+      }
 
       .social-networks {
         &__network {
@@ -49,6 +76,12 @@
           svg {
             margin-right: 9px;
           }
+
+          @include b('mobile') {
+            &:last-child {
+              margin-right: 0;
+            }
+          }
         }
       }
     }
@@ -58,6 +91,14 @@
       max-width: 530px;
 
       opacity: 0.5;
+
+      @include b('mobile') {
+        margin: 0 20px;
+
+        max-width: 350px;
+
+        text-align: center;
+      }
     }
 
     &__buttons {
@@ -77,6 +118,14 @@
           }
         }
       }
+    }
+
+    @include b('mobile') {
+      margin-left: 0;
+
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
   }
 }
