--- a/src/components/organisms/Header/Header.scss
+++ b/src/components/organisms/Header/Header.scss
@@ -1,4 +1,5 @@
 @import '../../../styles/vars';
+@import 'src/styles/mixins/media';
 
 .header {
   position: sticky;
@@ -42,5 +43,9 @@
     & + & {
       margin-left: 8px;
     }
+  }
+
+  @include b('mobile') {
+    overflow: hidden;
   }
 }
