--- a/src/pages/User/User.scss
+++ b/src/pages/User/User.scss
@@ -1,10 +1,17 @@
+@import 'src/styles/mixins/media';
+
 .user {
   &__cap {
-    padding-bottom: 230px;
+    min-height: 200px;
 
-    width: 100%;
-    height: 200px;
+    background-size: cover;
+  }
 
-    background-color: #1a237e;
+  @include b('mobile') {
+    .ant-tabs {
+      .ant-tabs-extra-content {
+        display: none;
+      }
+    }
   }
 }
