--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -126,4 +126,10 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
+  &-hover {
+    transition: 0.3s;
+    &:hover {
+      color: $purple;
+    }
+  }
 }
