--- a/src/styles/components/_popover.scss
+++ b/src/styles/components/_popover.scss
@@ -4,10 +4,13 @@
   }
 
   &-inner {
-    padding: 20px 24px 32px;
+    padding: 20px 20px 30px;
 
     background: #fafafa;
     border-radius: 30px;
     box-shadow: 0 4px 3px rgba(103, 59, 183, 0.1);
+    &-content {
+      padding: 0;
+    }
   }
 }
