--- a/src/pages/CreateChoose/CreateChoose.scss
+++ b/src/pages/CreateChoose/CreateChoose.scss
@@ -1,3 +1,5 @@
+@import 'src/styles/mixins/media';
+
 .c-create {
   padding: 90px 0 130px;
 
@@ -13,6 +15,9 @@
 
   &__text {
     max-width: 445px;
+    @include b('mobile') {
+      max-width: 350px;
+    }
   }
 
   &__subtitle {
@@ -28,6 +33,9 @@
     align-items: center;
 
     width: 100%;
+    @include b('mobile') {
+      justify-content: space-evenly;
+    }
   }
 
   &__item {
@@ -49,6 +57,26 @@
     & + & {
       margin-left: 50px;
       padding-top: 68px;
+      @include b('mobile') {
+        margin-left: 40px;
+      }
+    }
+
+    @include b('mobile') {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+
+      max-width: 150px;
+      min-height: 216px;
+
+      &:first-child {
+        padding: 42px 39px 21px 39px;
+      }
+
+      &:last-child {
+        padding: 31px 27px 21px 27px;
+      }
     }
   }
 }
