--- a/src/styles/components/_forms.scss
+++ b/src/styles/components/_forms.scss
@@ -1,4 +1,5 @@
 @import '../../styles/vars';
+@import 'src/styles/mixins/media';
 
 .form {
   &__sub {
@@ -174,6 +175,9 @@
 
       min-width: 320px;
       height: fit-content;
+      @include b('mobile') {
+        display: none;
+      }
     }
   }
 }
