--- a/src/components/organisms/HotCollections/HotCollections.scss
+++ b/src/components/organisms/HotCollections/HotCollections.scss
@@ -3,6 +3,10 @@
     margin-bottom: 32px;
   }
 
+  &__slide {
+    width: fit-content !important;
+  }
+
   &__slider {
     position: relative;
   }
