--- a/src/components/organisms/TopUsers/TopUsers.scss
+++ b/src/components/organisms/TopUsers/TopUsers.scss
@@ -1,9 +1,14 @@
 @import '../../../styles/vars';
+@import 'src/styles/mixins/media';
 
 .t-users {
   &__box {
     display: flex;
     align-items: center;
+    @include b('mobile') {
+      flex-direction: column;
+      align-items: flex-start;
+    }
   }
 
   &__filter {
@@ -48,6 +53,21 @@
           -webkit-text-fill-color: #fff;
         }
       }
+      @include b('mobile') {
+        display: flex;
+        justify-content: center;
+        width: 50%;
+      }
+    }
+    @include b('mobile') {
+      width: 100%;
+      margin: 17px 0 17px 0;
+      &:first-child {
+        max-width: 250px;
+      }
+      &:last-child {
+        max-width: 348px;
+      }
     }
   }
 
@@ -59,6 +79,9 @@
     grid-row-gap: 25px;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(3, 1fr);
+    @include b('mobile') {
+      margin-top: 9px;
+    }
   }
 
   &__user {
