--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,3 +1,5 @@
+@import 'src/styles/mixins/media';
+
 .home {
   &__preview {
     position: relative;
@@ -18,6 +20,9 @@
       position: absolute;
       right: 20px;
       bottom: 50px;
+      @include b('mobile') {
+        display: none;
+      }
     }
 
     &-search {
@@ -28,24 +33,45 @@
       width: 69.444vw;
 
       transform: translateX(-50%);
+      @include b('mobile') {
+        padding: 0 15px;
+        width: 100%;
+      }
+    }
+
+    @include b('mobile') {
+      padding: 75px 0;
     }
   }
 
   &__hot {
     padding: 90px 0 100px;
+    @include b('mobile') {
+      padding: 76px 0 30px;
+    }
   }
 
   &__top {
     padding-bottom: 95px;
+    @include b('mobile') {
+      padding-bottom: 30px;
+    }
   }
 
   &__collections {
     padding: 80px 0 90px;
 
     background: #f8f8f8;
+
+    @include b('mobile') {
+      padding: 30px 0;
+    }
   }
 
   &__explore {
     padding: 100px 0;
+    @include b('mobile') {
+      padding: 30px 0;
+    }
   }
 }
