--- a/src/components/organisms/TopUsers/TopUsers.scss
+++ b/src/components/organisms/TopUsers/TopUsers.scss
@@ -56,15 +56,19 @@
       @include b('mobile') {
         display: flex;
         justify-content: center;
+
         width: 50%;
       }
     }
     @include b('mobile') {
-      width: 100%;
       margin: 17px 0 17px 0;
+
+      width: 100%;
+
       &:first-child {
         max-width: 250px;
       }
+
       &:last-child {
         max-width: 348px;
       }
@@ -81,6 +85,9 @@
     grid-template-rows: repeat(3, 1fr);
     @include b('mobile') {
       margin-top: 9px;
+
+      display: flex;
+      flex-direction: column;
     }
   }
 
