fixed swiper mobile layout

--- a/src/components/molecules/HotCollectionCard/HotCollectionCard.scss
+++ b/src/components/molecules/HotCollectionCard/HotCollectionCard.scss
@@ -15,6 +15,7 @@
 
     width: 100%;
     grid-row-gap: 10px;
+    grid-column-gap: 4px;
     grid-template-columns: repeat(3, 97px);
     grid-template-rows: repeat(2, 97px);
 
