--- a/src/components/organisms/BurgerMenu/BurgerMenu.scss
+++ b/src/components/organisms/BurgerMenu/BurgerMenu.scss
@@ -7,6 +7,7 @@
 @include b('mobile') {
   .header-mobile {
     position: relative;
+
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -15,21 +16,24 @@
       width: 64px;
       height: 100%;
     }
-    &__box{
+
+    &__box {
       margin-left: auto;
     }
+
     &__menu {
       margin-right: 10px;
       margin-left: 15px;
 
       &-items {
-        overflow: auto;
         position: fixed;
         z-index: 999;
         top: 51px;
-        left: 0px;
+        left: 0;
 
         padding: 20px 20px 40px 20px;
+
+        overflow: auto;
 
         width: 100vw;
         height: calc(100vh - 40px);
@@ -54,28 +58,36 @@
         }
       }
     }
-    .footer{
-      &__nav{
+
+    .footer {
+      &__nav {
         margin-top: 0;
       }
-      &__btns{
-        margin-top:137px;
+
+      &__btns {
+        margin-top: 137px;
+
         display: flex;
         justify-content: space-between;
+
         width: 100%;
-        .btn-link{
+
+        .btn-link {
           width: 100%;
           max-width: 165px;
         }
-        .btn{
+
+        .btn {
           width: 100%;
         }
       }
-      .flex-center{
+
+      .flex-center {
         justify-content: center;
       }
-      &__box-bottom{
-        margin-top:41px;
+
+      &__box-bottom {
+        margin-top: 41px;
       }
     }
   }
