--- a/src/styles/components/_input.scss
+++ b/src/styles/components/_input.scss
@@ -44,6 +44,24 @@ textarea {
     &:hover {
       border: none;
     }
+    .ant-input {
+      font-size: 16px;
+      line-height: 20px;
+      font-weight: 700;
+      background: transparent !important;
+      border: none;
+
+      &:hover {
+        border: none;
+      }
+      &-suffix {
+        font-size: 18px;
+        line-height: 22px;
+        font-weight: 700;
+        mix-blend-mode: normal;
+        opacity: 0.5;
+      }
+    }
   }
 }
 
