created verify modal

--- a/src/styles/components/_box.scss
+++ b/src/styles/components/_box.scss
@@ -4,6 +4,10 @@
     box-shadow: 0 4px 3px rgba(103, 59, 183, 0.1);
   }
 
+  &-white {
+    background: #fff;
+  }
+
   &-shadow-border {
     background: #fff;
     border: 1px solid #ededed;
