--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -4,6 +4,7 @@ $purple-d: #79408b;
 $purple-hover: #884ff1;
 $purple-grad: linear-gradient(105.93deg, #8834a2 -23.55%, #d9226e 103.33%);
 $blue-grad: linear-gradient(41.78deg, #1a237e 18.98%, #673ab7 54.7%, #e91e63 84.39%);
+$gray-grad: linear-gradient(93.58deg, #dadada -2.94%, #afafaf 101.05%);
 $pink: #d62370;
 $pink-l: #da3d80;
 $gray: #959595;
