--- a/src/styles/components/_swiper.scss
+++ b/src/styles/components/_swiper.scss
@@ -12,6 +12,9 @@
     height: 42px;
 
     cursor: pointer;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    user-select: none;
 
     background: #fafafa;
     border-radius: 30px;
