--- a/src/styles/components/_upload.scss
+++ b/src/styles/components/_upload.scss
@@ -19,6 +19,10 @@
 .uploader {
   position: relative;
 
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  user-select: none;
+
   &__img {
     margin: 0 auto;
 
