*added user id routing *created self and non self user pages *added follow/unfollow requests

--- a/src/components/molecules/UserOverview/UserOverview.scss
+++ b/src/components/molecules/UserOverview/UserOverview.scss
@@ -22,6 +22,12 @@
     }
   }
 
+  &__edit-cover {
+    position: absolute !important;
+    top: -17px;
+    right: 50px;
+  }
+
   &__content {
     margin-left: 220px;
     //display: flex;
