created 404 page style fixes

--- a/src/components/molecules/UserOverview/UserOverview.scss
+++ b/src/components/molecules/UserOverview/UserOverview.scss
@@ -26,6 +26,10 @@
     position: absolute !important;
     top: -17px;
     right: 50px;
+    @include b('mobile') {
+      top: -180px;
+      right: 0;
+    }
   }
 
   &__content {
