--- a/src/components/organisms/UserPopover/UserPopover.scss
+++ b/src/components/organisms/UserPopover/UserPopover.scss
@@ -63,7 +63,7 @@
         width: 52px;
         height: 52px;
 
-        background: white !important;
+        background: #fff !important;
         border: 1px solid #ededed;
         border-radius: 50%;
       }
