--- a/src/components/molecules/HotCollectionCard/HotCollectionCard.scss
+++ b/src/components/molecules/HotCollectionCard/HotCollectionCard.scss
@@ -15,18 +15,19 @@
 
     width: 100%;
     grid-row-gap: 10px;
+    grid-column-gap: 3px;
     grid-template-columns: repeat(3, 97px);
     grid-template-rows: repeat(2, 97px);
 
     &-img {
       overflow: hidden;
 
-      height: 100%;
-
       border-radius: 12px;
 
       img {
+        width: 100%;
         height: 100%;
+        object-fit: contain;
       }
 
       &-empty {
