--- a/src/components/organisms/BurgerMenu/BurgerMenu.scss
+++ b/src/components/organisms/BurgerMenu/BurgerMenu.scss
@@ -40,6 +40,10 @@
 
         background-color: #fafafaff;
 
+        -webkit-transition: all 0.5s ease;
+        -moz-transition: all 0.5s ease;
+        transition: all 0.5s ease;
+
         .header-mobile__search {
           box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
         }
@@ -94,5 +98,21 @@
 }
 
 .visually-hidden {
-  display: none;
+  position: fixed;
+  z-index: 999;
+  top: 51px;
+  left: 0;
+
+  padding: 0 20px 0 20px;
+
+  overflow: hidden;
+
+  width: 100vw;
+  height: 0;
+
+  background-color: #fafafaff;
+
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  transition: all 0.5s ease;
 }
