show collections in create page

--- a/src/components/organisms/ChooseCollection/ChooseCollection.scss
+++ b/src/components/organisms/ChooseCollection/ChooseCollection.scss
@@ -16,6 +16,9 @@
       transform: rotate(180deg);
     }
   }
+  &__slide {
+    min-width: 186.667px !important;
+  }
 
   &__content {
     margin-top: 20px;
