--- a/src/styles/components/_forms.scss
+++ b/src/styles/components/_forms.scss
@@ -287,6 +287,17 @@
       justify-content: center;
       align-items: center;
     }
+    .input__field-create {
+      position: relative;
+    }
+    &__input {
+      &-error {
+        position: absolute;
+        color: #ff0000ff;
+        bottom: -25px;
+        left: 0;
+      }
+    }
   }
 
   &-verify {
