--- a/src/components/molecules/NFTCard/NFTCard.scss
+++ b/src/components/molecules/NFTCard/NFTCard.scss
@@ -32,12 +32,14 @@
       width: fit-content;
       max-width: 100%;
       height: 320px;
+      width: 100%;
 
       border-radius: 12px;
 
       img {
         max-width: 102%;
         max-height: 102%;
+        min-width: 100%;
       }
     }
   }
