--- a/src/components/molecules/FollowCard/FollowCard.scss
+++ b/src/components/molecules/FollowCard/FollowCard.scss
@@ -11,6 +11,7 @@
     width: 100%;
     max-width: 92px;
     height: 100%;
+    border-radius: 50%;
     @include b('mobile') {
       max-width: 48px;
     }
@@ -33,8 +34,6 @@
       margin-right: 0;
       padding: 8px 20px !important;
 
-      width: 100%;
-      max-width: 90px;
       @include b('mobile') {
         margin-left: auto;
       }
@@ -58,21 +57,26 @@
     display: flex;
     overflow: hidden;
 
-    &__token {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-
-      background: #f4f4f4;
-      border-radius: 12px;
-
-      &:not(:last-child) {
-        margin-right: 10px;
-      }
-    }
     @include b('mobile') {
       display: none;
     }
+  }
+  &__token-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 98px;
+    height: 98px;
+    background: #f4f4f4;
+    border-radius: 12px;
+    overflow: hidden;
+
+    &:not(:last-child) {
+      margin-right: 10px;
+    }
+  }
+  &__token {
+    width: 100%;
   }
 
   @include b('mobile') {
