fix desktop sliders

--- a/src/styles/components/_swiper.scss
+++ b/src/styles/components/_swiper.scss
@@ -58,7 +58,7 @@
 
   &-container {
     .swiper-slide {
-      margin-right: 20px !important;
+      // margin-right: 20px !important;
     }
 
     @include b('mobile') {
