--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -14,4 +14,9 @@
   &-body {
     padding: 0;
   }
+  &-close-x {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
