--- a/src/components/organisms/PutOnSaleModal/PutOnSaleModal.scss
+++ b/src/components/organisms/PutOnSaleModal/PutOnSaleModal.scss
@@ -1,38 +1,52 @@
 .m-put-on-sale {
   &__content {
     padding: 35px 20px 25px;
+
     background: #fff;
   }
+
   &__subtitle {
-    margin: 20px 0px 30px;
+    margin: 20px 0 30px;
   }
+
   &__box {
     display: flex;
     align-items: center;
+
     &-img {
+      display: flex;
+      justify-content: center;
+      align-items: flex-end;
+
       width: 62px;
       height: 47px;
-      display: flex;
-      align-items: flex-end;
-      justify-content: center;
     }
   }
+
   &__item {
-    border-radius: 30px;
-    width: 160px;
-    cursor: pointer;
+    padding: 40px 10px 15px;
+
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 40px 10px 15px;
+
+    width: 160px;
+
+    cursor: pointer;
+
+    border-radius: 30px;
+
     & + & {
       margin-left: 20px;
     }
+
     &-text {
       margin-top: 25px;
+
       max-width: 81px;
-      text-align: center;
       height: 35px;
+
+      text-align: center;
     }
   }
 }
