--- a/src/components/molecules/NFTCard/NFTCard.scss
+++ b/src/components/molecules/NFTCard/NFTCard.scss
@@ -10,13 +10,12 @@
   }
 
   &__box {
-    overflow: hidden;
-
     text-overflow: ellipsis;
+    margin-bottom: 20px;
 
     & + & {
-      margin-top: 20px;
       padding-top: 15px;
+      margin-top: 0;
 
       border-top: 1px dashed rgba(0, 0, 0, 0.1);
     }
