now displaying highest bid on token page

--- a/src/pages/Token/Token.scss
+++ b/src/pages/Token/Token.scss
@@ -23,9 +23,8 @@
   }
 
   &__bids{
-    padding: 20px 0;
+    padding: 20px 0 0 0;
     border-top: rgb(230,230,230) 1px solid ;
-    border-bottom: rgb(230,230,230) 1px solid ;
     &-amount{
       margin-left:64px;
     }
