check availability modal

--- a/src/styles/components/_box.scss
+++ b/src/styles/components/_box.scss
@@ -3,6 +3,9 @@
     background: #fafafa;
     box-shadow: 0 4px 3px rgba(103, 59, 183, 0.1);
   }
+  &-gray {
+    background: #fafafa;
+  }
 
   &-white {
     background: #fff;
