lint fix & auto inserting fee and total supply into fixed price modal

--- a/src/components/molecules/FixedPriceModal/FixedPriceModal.scss
+++ b/src/components/molecules/FixedPriceModal/FixedPriceModal.scss
@@ -1,8 +1,10 @@
 .m-fixed-price {
   &__content {
     padding: 40px 20px 30px;
-    background: #ffffff;
+
+    background: #fff;
   }
+
   &__subtitle {
     margin-top: 20px;
   }
