--- a/src/components/molecules/PageOverview/PageOverview.scss
+++ b/src/components/molecules/PageOverview/PageOverview.scss
@@ -107,10 +107,7 @@
       flex-direction: row;
 
       .btn {
-        &:nth-last-child(-n + 2) {
-          margin-left: 20px;
-        }
-
+        margin-right: 20px;
         &:nth-child(2) {
           span {
             margin-left: 10px;
