success and error modals

--- a/src/styles/components/_upload.scss
+++ b/src/styles/components/_upload.scss
@@ -1,6 +1,6 @@
 .ant-upload {
   &.ant-upload-drag {
-    background: transparent;
+    background: #fff !important;
     border: 2px dashed #d2d2d2;
     border-radius: 30px;
 
