reworked slider in HotCollections and hotbids

--- a/src/components/organisms/HotCollections/HotCollections.scss
+++ b/src/components/organisms/HotCollections/HotCollections.scss
@@ -3,9 +3,9 @@
     margin-bottom: 32px;
   }
 
-  &__slide {
-    width: fit-content !important;
-  }
+  //&__slide {
+  //  width: fit-content !important;
+  //}
 
   &__slider {
     position: relative;
