--- a/src/styles/components/_swiper.scss
+++ b/src/styles/components/_swiper.scss
@@ -25,11 +25,11 @@
     transform: translateY(-50%);
 
     &-next {
-      right: -21px;
+      right: -10px;
     }
 
     &-prev {
-      left: -21px;
+      left: -10px;
 
       img {
         transform: rotate(180deg);
@@ -61,11 +61,11 @@
       // margin-right: 20px !important;
     }
 
-    @include b('mobile') {
-      max-width: 320px;
-
-      .swiper-slide {
-        margin-right: 0 !important;
+    .swiper-slide {
+      display: flex;
+      justify-content: center;
+      .hot-col-card {
+        margin-right: 0;
       }
     }
   }
