fixed grad selection

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -139,8 +139,9 @@
     background: $purple-grad;
     background-clip: text;
     -webkit-text-fill-color: transparent;
-    &::selection {
-      -webkit-text-fill-color: #fff;
+    &::selection,
+    ::selection {
+      -webkit-text-fill-color: #fff !important;
     }
   }
 
