--- a/src/components/organisms/ChooseCollection/ChooseCollection.scss
+++ b/src/components/organisms/ChooseCollection/ChooseCollection.scss
@@ -15,9 +15,11 @@
     cursor: pointer;
     transition: 0.6s;
     height: 24px;
-    &:focus {
-      transform: rotate(360deg);
-      transform-origin: center center;
+    transform: rotate(360deg);
+    transition: transform 0.5s;
+    &:active {
+      transform: rotate(0deg);
+      transition: 0s;
     }
   }
 
