minimal bid input in create token form

--- a/src/styles/components/_forms.scss
+++ b/src/styles/components/_forms.scss
@@ -131,6 +131,9 @@
       & + & {
         margin-top: 30px;
       }
+      &-instant-sale {
+        margin-top: 30px;
+      }
     }
 
     &__item {
