--- a/src/pages/Token/Token.scss
+++ b/src/pages/Token/Token.scss
@@ -30,9 +30,8 @@
     &-amount {
       margin-left: 64px;
     }
-    & + & {
-      border-bottom: rgb(230, 230, 230) 1px solid;
-      padding-bottom: 20px;
+    &:last-child() {
+      border-bottom: none;
     }
   }
 
