margin for btns-wrapper

--- a/src/pages/Token/Token.scss
+++ b/src/pages/Token/Token.scss
@@ -90,6 +90,11 @@
         margin-left: 15px;
       }
     }
+    &-wrapper {
+      & + & {
+        margin-left: 15px;
+      }
+    }
   }
 
   &__info {
