Created feedback form without captcha

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -151,8 +151,9 @@
     background: $blue-grad;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    &::selection {
-      -webkit-text-fill-color: #fff;
+    &::selection,
+    ::selection {
+      -webkit-text-fill-color: #fff !important;
     }
   }
 
