--- a/src/pages/Token/Token.scss
+++ b/src/pages/Token/Token.scss
@@ -24,17 +24,15 @@
   }
 
   &__bids {
-    //padding: 20px 0 0 0;
-    //border-top: rgb(230, 230, 230) 1px solid;
-    padding: 0 0 20px 0;
+    padding: 20px 0 0 0;
+    border-top: rgb(230, 230, 230) 1px solid;
     margin-top: 20px;
     &-amount {
       margin-left: 64px;
-    }/*
+    }
     &:last-child() {
-      border-bottom: rgb(230, 230, 230) 1px solid;
-    }*/
-    border-bottom: rgb(230, 230, 230) 1px solid;
+      border-bottom: none;
+    }
   }
 
   &__share {
@@ -42,17 +40,14 @@
   }
 
   &__btns {
-    //margin: 20px 0;
-    //padding: 20px 0 30px;
+    margin: 20px 0;
+    padding: 20px 0 30px;
 
     display: flex;
     align-items: center;
 
-    padding: 0 0 20px 0;
-    margin-top: 20px;
-    border-bottom: rgb(230, 230, 230) 1px solid;
-    //border-top: 1px solid rgba(0, 0, 0, 0.1);
-    //border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 
     &-container {
       display: flex;
@@ -147,8 +142,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-bottom: rgb(230, 230, 230) 1px solid;
-    padding: 0 0 20px 0;
     @include b('mobile') {
       .token__wrapper {
         display: none;
