--- a/src/pages/Token/Token.scss
+++ b/src/pages/Token/Token.scss
@@ -48,6 +48,10 @@
 
     border-top: 1px solid rgba(0, 0, 0, 0.1);
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    & + & {
+      border-top: none;
+      padding-top: 0;
+    }
 
     &-container {
       display: flex;
