--- a/src/components/molecules/NFTCard/NFTCard.scss
+++ b/src/components/molecules/NFTCard/NFTCard.scss
@@ -1,18 +1,24 @@
-.nft-card {
-  max-width: 320px;
+@import "src/styles/mixins/media";
 
+.nft-card {
+  width: 320px;
+  height: 580px;
   background: #fff;
   border: 1px solid #e7e7e7;
   border-radius: 12px;
+  @include b('tablet') {
+    width: 370px;
+    height: 630px;
+  }
 
   &__name {
     white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
   }
 
   &__box {
     margin-bottom: 20px;
-
-    text-overflow: ellipsis;
 
     & + & {
       margin-top: 0;
@@ -37,13 +43,15 @@
       justify-content: center;
       align-items: center;
 
-      width: fit-content;
       width: 100%;
       max-width: 100%;
       height: 320px;
 
       border-radius: 12px;
 
+      @include b('tablet') {
+        height: 370px;
+      }
       img {
         min-width: 100%;
         max-width: 102%;
@@ -60,6 +68,12 @@
 
   &__content {
     padding: 20px 20px 15px;
+    height: 100%;
+    max-height: 258px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
 
   &__auction {
